--- a/pag-android/style2.css
+++ b/pag-android/style2.css
@@ -29,6 +29,8 @@
 body {
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
+    margin: 0px;
+    padding: 0px;
 }
 
 a.externo:after {
